# test

./: .editorconfig  .gitbook.yaml  .gitignore  .gitmodules  .markdownlint.json  .style.yapf  CODEOWNERS  Makefile  README.md  SUMMARY.md  algorithm.md  bug.md  computer-science.md  data-structure.md  database.md  digression.md  docker-compose.yml  language.md  math.md  package.json  science.md  setup.cfg  software.md  study.code-workspace  table_of_contents.md  tool.md
actions/: .include  include  link.txt
algorithm/: .adhoc.prob  .aho-corasick.prob  .constructive.prob  .heuristic.prob  .interactive.prob  .minimax.prob  .mos.prob  .random.prob  .randomization.prob  .simulation.prob  .sprague-grundy.prob  divide-concur.md  dynamic-programming.md  greedy.md  sort.md
computer-science/: application-layer.md  concurrency.md  hardware.md  network.md  os.md  security.md
data-structure/: .date-sql.prob  .date.prob  graph.md  hash.md  list.md  string.md  tree.md
database/: cms.md  dql.md  nosql.md  query.md  sql.md
digression/: us.md
language/: 07_sklearn.ipynb  11_func_itertool.ipynb  14_torch_vision.ipynb  24_numpy.ipynb  30_psycopg2.ipynb  67_sysconfig.ipynb  conditional.md  cpp.md  fire_class.py  hdl.md  io_python_c.py  loop.md  (+10 more)
language/cpp/cmake/03_data/: CMakeLists.txt
language/cpp/cmake/03_data/subdir/: CMakeLists.txt
language/cpp/media/opencv/: .clang-format  03_video.cpp  CMakeLists.txt  template_class
language/module/image-resize/: CMakeLists.txt
language/module/image-resize/include/: image.h  prof.h
language/module/image-resize/src/: main.cpp
(+1643 files in other folders)
